--- a/AppTFG/AppTFG/AppShell.xaml
+++ b/AppTFG/AppTFG/AppShell.xaml
@@ -11,7 +11,7 @@
         <ResourceDictionary>
             <Style x:Key="BaseStyle" TargetType="Element">
                 <!--El color Primary se establece en la clase App.xaml y es el blanco-->
-                <Setter Property="Shell.BackgroundColor" Value="{DynamicResource PrimaryColor}" />
+                <Setter Property="Shell.BackgroundColor" Value="#791AE5" />
                 <!--Color de lo que está en los toolbars y del menú-->
                 <Setter Property="Shell.ForegroundColor" Value="{DynamicResource SecondaryColor}" />
                 <!--Color de los títulos que aparecen en los toolbars-->
@@ -19,12 +19,12 @@
                 <!--<Setter Property="Shell.DisabledColor" Value="Black" />
                 <Setter Property="Shell.UnselectedColor" Value="Blue" />-->
                 <!--Color de la barra del menú inferior-->
-                <Setter Property="Shell.TabBarBackgroundColor" Value="{DynamicResource PrimaryColor}" />
+                <Setter Property="Shell.TabBarBackgroundColor" Value="White" />
                 <!--<Setter Property="Shell.TabBarForegroundColor" Value="Black"/>-->                
                 <!--Color de los iconos del menú inferior que no están seleccionados-->
-                <Setter Property="Shell.TabBarUnselectedColor" Value="{DynamicResource BotonesBarraAbajo}"/>
+                <Setter Property="Shell.TabBarUnselectedColor" Value="#791AE5"/>
                 <!--Color de los iconos del menú inferior que están seleccionados-->
-                <Setter Property="Shell.TabBarTitleColor" Value="{DynamicResource BotonSeleccionadoBarraAbajo}"/>
+                <Setter Property="Shell.TabBarTitleColor" Value="Black"/>
             </Style>
             <!--<Style TargetType="TabBar" BasedOn="{StaticResource BaseStyle}" />-->
             <!--Así le doy el mismo diseño que he definido arriba al FlyoutItem y al ShellContent-->
