--- a/AppTFG/AppTFG/Paginas/ListaPueblos.xaml
+++ b/AppTFG/AppTFG/Paginas/ListaPueblos.xaml
@@ -2,32 +2,30 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="AppTFG.Paginas.ListaPueblos"
-             BackgroundColor="{DynamicResource PageBackgroundColor}">
-    <!--xmlns:cv="clr-namespace:CarouselView.FormsPlugin.Abstractions;assembly=CarouselView.FormsPlugin.Abstractions"-->
+             BackgroundColor="{DynamicResource PageBackgroundColor}"
+             xmlns:sharedTransitions="clr-namespace:Plugin.SharedTransitions;assembly=Plugin.SharedTransitions"
+             sharedTransitions:SharedTransitionNavigationPage.TransitionSelectedGroup="{Binding SelectedItemId}"
+             sharedTransitions:SharedTransitionNavigationPage.BackgroundAnimation="SlideFromRight">
     <ContentPage.ToolbarItems>
         <ToolbarItem x:Name="btnAgregar" Text="Mi pueblo" Order="Primary" Priority="0" Clicked="BtnAgregar_Clicked"/>
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout Spacing="0" Orientation="Vertical" Padding="0" >
             <ActivityIndicator x:Name="indicator" Color="Teal" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
-            <SearchBar x:Name="searchBar" HorizontalOptions="Fill" VerticalOptions="CenterAndExpand" TextColor="{DynamicResource PrimaryTextColor}"
+            <SearchBar x:Name="searchBar" HorizontalOptions="Fill" VerticalOptions="CenterAndExpand" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular"
                    Placeholder="Buscar pueblo" CancelButtonColor="{DynamicResource PrimaryTextColor}" PlaceholderColor="{DynamicResource PrimaryTextColor}"
                    TextTransform="Lowercase" HorizontalTextAlignment="Start" TextChanged="OnTextChanged" BackgroundColor="{DynamicResource TertiaryTextColor}"/>
             <ListView x:Name="lsvPueblos" ItemSelected="LsvPueblos_ItemSelected" HasUnevenRows="True">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout Spacing="0" Orientation="Horizontal" Padding="5" BackgroundColor="{DynamicResource PageBackgroundColor}">
-                                <!--<Label Text="{Binding Nombre}" LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="Title" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="Start" Margin="12,5,12,1" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
-                                <cv:CarouselViewControl Orientation="Horizontal" InterPageSpacing="10" Position="{Binding myPosition}" ItemsSource="{Binding Fotos}" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-                                    <cv:CarouselViewControl.ItemTemplate>
-                                        <DataTemplate>
-                                            <Image Source="{Binding ImagenPrincipal}" WidthRequest="70" HeightRequest="70" Aspect="AspectFill" HorizontalOptions="Start"/>
-                                        </DataTemplate>
-                                    </cv:CarouselViewControl.ItemTemplate>
-                                </cv:CarouselViewControl>-->
-                                <Image Source="{Binding ImagenPrincipal}" WidthRequest="70" HeightRequest="70" Aspect="AspectFill" HorizontalOptions="Start"/>
-                                <Label Text="{Binding Nombre}" LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="Title" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="Start" Margin="12,5,12,1" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
+                            <StackLayout Spacing="0" Orientation="Vertical" Padding="0" BackgroundColor="{DynamicResource PageBackgroundColor}">
+                                <Label Text="{Binding Nombre}" LineBreakMode="WordWrap" 
+                                                           VerticalOptions="Center" FontSize="Title" TextColor="{DynamicResource PrimaryTextColor}" 
+                                                           HorizontalOptions="Start" Margin="5, 5, 0, 5"
+                                                           HorizontalTextAlignment="Start" FontFamily="BSDSemiBold"/>
+                                <Image Source="{Binding ImagenPrincipal}"  Aspect="AspectFill" HeightRequest="250"
+                                                           HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
