--- a/AppTFG/AppTFG/Paginas/ListaRutas.xaml
+++ b/AppTFG/AppTFG/Paginas/ListaRutas.xaml
@@ -14,9 +14,9 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout Spacing="0" Orientation="Horizontal" Padding="5" BackgroundColor="{DynamicResource PageBackgroundColor}">
-                                <Image Source="{Binding ImagenPrincipal}" WidthRequest="70" HeightRequest="70" Aspect="AspectFill" HorizontalOptions="Start"/>
+                            <StackLayout Spacing="0" Orientation="Vertical" Padding="0" BackgroundColor="{DynamicResource PageBackgroundColor}">
                                 <Label Text="{Binding Nombre}" LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="Title" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="Start" Margin="10,5,10,5" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
+                                <Image Source="{Binding ImagenPrincipal}" HeightRequest="250" Aspect="AspectFill" HorizontalOptions="Fill"/>
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
