--- a/AppTFG/AppTFG/Paginas/PaginaVistaListaActividades.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaVistaListaActividades.xaml
@@ -10,10 +10,25 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout Spacing="0" Orientation="Horizontal" Padding="5">
-                                <Image Source="{Binding ImagenPrincipal}" WidthRequest="70" HeightRequest="70" Aspect="AspectFill" HorizontalOptions="Start"/>
-                                <Label Text="{Binding Nombre}" LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="Title" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="Start" Margin="12,5,12,1" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
-                            </StackLayout>
+                            <Grid BackgroundColor="{DynamicResource PageBackgroundColor}" ColumnSpacing="10" RowSpacing="0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="50"/>
+                                    <RowDefinition Height="250"/>
+                                    <RowDefinition Height="50"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="3*"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Text="{Binding Nombre}" LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="Title" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="Start" Margin="12,5,12,1" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
+                                <Image Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="5" Source="{Binding ImagenPrincipal}" HeightRequest="250" Aspect="AspectFill" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
+                                <Label Grid.Row="2" Grid.Column="0" Text="Fecha:" VerticalOptions="Center" FontSize="Medium" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="End" Margin="2,0,0,2" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
+                                <Label Grid.Row="2" Grid.Column="1" Text="{Binding Fecha}" VerticalOptions="Center" FontSize="Medium" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="Start" Margin="2,0,0,2" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
+                                <Label Grid.Row="2" Grid.Column="2" Text="Hora:" VerticalOptions="Center" FontSize="Medium" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="End" Margin="2,0,0,2" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
+                                <Label Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" Text="{Binding Hora}" VerticalOptions="Center" FontSize="Medium" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="Start" Margin="2,0,0,2" HorizontalTextAlignment="Start" FontFamily="BSDRegular"/>
+                            </Grid>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
