Cambiando reproducción de vídeo.

--- a/AppTFG/AppTFG/Paginas/PaginaRuta.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaRuta.xaml
@@ -29,6 +29,9 @@
                                 BackgroundColor="{DynamicResource PrimaryColor}" Margin="0" FontSize="Small"
                                 TextColor="{DynamicResource PageBackgroundColor}" WidthRequest="90"  FontFamily="BSDRegular"
                                 HorizontalOptions="End" Clicked="BtnImagen_Clicked"/>
+                    <Editor x:Name="txtDescripcion" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Descripcion}" 
+                                Placeholder="Ingresa una descripción de la ruta"  Margin="10, -5, 10, 10" AutoSize="TextChanges"
+                                PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Medium" FontFamily="BSDRegular"/>
                 </Grid>
             </StackLayout>
         </Frame>
